--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "files": [
     "dist/"
   ],
+  "dependencies": {
+    "js-snip": "^1.0.0-beta.1"
+  },
   "devDependencies": {
     "@babel/core": "^7.10.3",
     "@babel/preset-env": "^7.10.3",
