--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "webpack --mode=production",
     "prepare": "yarn build",
     "lint": "eslint ./",
+    "lint:fix": "eslint ./ --fix",
     "dev": "NODE_ENV=development webpack-dev-server",
     "dev:demo": "NODE_ENV=development webpack-dev-server --demo",
     "test:open": "NODE_ENV=test start-server-and-test 'webpack-dev-server' http://localhost:9001 'cypress open'",
